[package]
name = "quantum_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-files = "0.6.5"
num-complex = "0.2.4"

[dependencies.quantum-bits]
default_features = false
git = 'https://github.com/debasish-raychawdhuri/quantum.git'
#rev = 'd4b2122f65d145565960dbe5a80fc7d9bf4220d5'


